--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,3 +188,60 @@ canvas {
   z-index: 20;
   background-color: #252528;
 }
+
+.control-player-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(239, 170, 196, 1);
+}
+
+.control-player-1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(123, 223, 242, 1);
+}
+
+#wheel-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  color: white;
+  font-size: 60px;
+  font-family: Bangers;
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+#wheel-button:active {
+  opacity: 75%;
+}
+
+#wheel-button:disabled {
+  opacity: 20%;
+}
+
+.control-player-1 #wheel-button {
+  background-color: #1b8094;
+}
+
+.control-player-2 #wheel-button {
+  background-color: #bc205b;
+}
+
+.player-content-message {
+  color: white;
+  font-size: 75px;
+  margin-top: 30px;
+  text-align: center;
+}
